--- a/css/style.css
+++ b/css/style.css
@@ -33,11 +33,14 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 40%;
 }
 
 .nav__item {
-  margin-right: 25px;
-  padding-right: 10px;
+  margin-right: 15px;
+  padding: 10px 10px 10px 10px;
   list-style-type: none;
 }
 
@@ -48,6 +51,22 @@ ul {
 }
 
 .cart {
-  background-image: url(img/icons/pointer.svg);
+  padding-left: 44px;
+  width: 30px;
+  height: 30px;
+  background-image: url(../img/icons/basket.svg);
+  background-repeat: no-repeat;
+  background-position: 0 center;
+}
+
+.cart__count {
+  display: block;
+  padding: 10px 24px;
+  background-image: url(../img/icons/pointer.svg);
+  background-position: 0 center;
+  background-repeat: no-repeat;
+  color: #F9F6F1;
+  font-size: 12px;
+  font-weight: 700;
 }
 /*# sourceMappingURL=style.css.map */
