--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ ul {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding-bottom: 147px;
 }
 
 .nav__list {
@@ -40,7 +41,7 @@ ul {
 
 .nav__item {
   margin-right: 15px;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 0px;
   list-style-type: none;
 }
 
@@ -68,5 +69,73 @@ ul {
   color: #F9F6F1;
   font-size: 12px;
   font-weight: 700;
+}
+
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding-bottom: 120px;
+}
+
+.main__item {
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  max-width: 50%;
+}
+
+.sale__title {
+  margin: 0;
+  margin-bottom: 28px;
+  font-size: 30px;
+  font-weight: 400;
+}
+
+.sale__description {
+  margin: 0;
+  padding-bottom: 60px;
+  font-size: 55px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.btn {
+  padding: 18px 30px;
+  text-transform: uppercase;
+  background-color: #D7B399;
+  text-decoration: none;
+  color: #fff;
+}
+
+.price {
+  position: relative;
+}
+
+.price__old {
+  position: absolute;
+  right: 20px;
+  top: 5px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.price__new {
+  margin: 0;
+  position: absolute;
+  right: 15px;
+  top: 49px;
+  font-size: 42px;
+  font-weight: 700;
+  color: #D84033;
+}
+
+.price__img {
+  margin-top: -30px;
 }
 /*# sourceMappingURL=style.css.map */
