--- a/style.scss
+++ b/style.scss
@@ -13,6 +13,31 @@ body {
 
 ul {
   padding-left: 0;
+  li {
+    list-style-type: none;
+  }
+}
+
+.btn {
+  padding: 18px 30px;
+  text-transform: uppercase;
+  background-color: $accent;
+  text-decoration: none;
+  color:$white;
+
+  &__xs {
+    padding: 6px 30px;
+  }
+
+  &__catalog {
+    font-size: 16px;
+    line-height: 20px;
+    padding: 18px 35px;
+
+    & img {
+      padding-left: 10px;
+    }
+  }
 }
 
 .page {
@@ -22,6 +47,10 @@ ul {
 
   &__dark {
     background-color: $dark;
+  }
+
+  &__white {
+    background-color: $white;
   }
 }
 
@@ -107,17 +136,6 @@ ul {
   }
 }
 
-.btn {
-  padding: 18px 30px;
-  text-transform: uppercase;
-  background-color: $accent;
-  text-decoration: none;
-  color:$white;
-
-  &__xs {
-    padding: 6px 30px;
-  }
-}
 .price {
   position: relative;
 
@@ -207,6 +225,81 @@ ul {
   &__woman {
     background-image: url('../img/woman-col.png');
     background-position: calc(100% - 50px) bottom;
+  }
+}
+
+.catalog {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 150px 0px 150px 0px;
+
+  &__heading {
+    margin: 0;
+    margin: 0px 0px 83px 0px;
+    font-weight: bold;
+    font-size: 36px;
+    line-height: 44px;
+    text-transform: uppercase;
+  }
+
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    flex-shrink: 0;
+    width: 100%;
+    margin-left: -7px;
+    margin-right: -7px;
+    margin-bottom: 124px;
+  }
+
+  &__item {
+    flex: 0 0 23.333%;
+    position: relative;
+    margin-left: 7px;
+    margin-right: 7px;
+    margin-bottom: 50px;
+    text-align: center;
+    margin-right: 14px;
+
+    &:nth-child(4n) {
+      margin-right: 0;
+    }
+
+    &:before, &::after {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 25px;
+      content: ''; 
+      background-size: cover;
+      background-repeat: no-repeat;
+    }
+
+    &:before {
+      background-image: url('../img/icons/corner-top.svg');
+    }
+
+    &:after {
+      background-image: url('../img/icons/corner-botton.svg');
+    }
+  }
+
+  &__title {
+    margin: 0;
+    margin: 50px 0px 5px 0px;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 17px;
+  }
+
+  &__price {
+    margin: 0;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 22px;
+    color: $accent;
   }
 }
 
