--- a/css/style.css
+++ b/css/style.css
@@ -272,7 +272,7 @@ ul li {
   width: 100%;
   margin-left: -7px;
   margin-right: -7px;
-  margin-bottom: 124px;
+  margin-bottom: 77px;
 }
 
 .catalog__item {
@@ -325,6 +325,10 @@ ul li {
   color: #D7B399;
 }
 
+.footer {
+  color: #fff;
+}
+
 .footer__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -332,7 +336,7 @@ ul li {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  color: #fff;
+  padding: 82px 0px 69px 0px;
 }
 
 .footer__list {
@@ -342,10 +346,61 @@ ul li {
 }
 
 .footer__item {
-  margin-right: 30px;
+  margin-left: 72px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+  max-width: 150px;
 }
 
-.link__item a {
+.links__title,
+.categories__title,
+.useful__title,
+.social__title {
+  margin: 0;
+  margin-bottom: 20px;
   color: #fff;
+  font-weight: bold;
+  font-size: 10px;
+  line-height: 12px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.links__list,
+.categories__list,
+.useful__list,
+.social__list {
+  margin: 0;
+}
+
+.link__item,
+.categories__link-item,
+.useful__link-item,
+.social__item {
+  margin-bottom: 10px;
+}
+
+.link__item a,
+.categories__link-item a,
+.useful__link-item a,
+.social__link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #CBCFD4;
+  text-decoration: none;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.social__link img {
+  margin-right: 10px;
 }
 /*# sourceMappingURL=style.css.map */
